Remove unused `int end` parameter in `make_shared`

--- a/book/book.tex
+++ b/book/book.tex
@@ -3433,7 +3433,7 @@ Finally, here is the code that creates the child threads:
     int i;
     pthread_t child[NUM_CHILDREN];
 
-    Shared *shared = make_shared(1000000);
+    Shared *shared = make_shared();
 
     for (i=0; i<NUM_CHILDREN; i++) {
         child[i] = make_thread(entry, shared);
@@ -3601,7 +3601,7 @@ typedef struct {
 And initialize it in \verb"make_shared"
 
 \begin{verbatim}
-Shared *make_shared(int end)
+Shared *make_shared()
 {
     Shared *shared = check_malloc(sizeof(Shared));
     shared->counter = 0;
